--- a/index.html
+++ b/index.html
@@ -12,6 +12,52 @@
       padding: 0;
     }
 
+    .primary-button {
+        display: inline-block;
+        padding: 14px 32px;
+        background: linear-gradient(to right, #4a90e2, #9013fe);
+        border-radius: 12px;
+        font-weight: 600;
+        color: #fff;
+        text-decoration: none;
+        transition: transform 0.2s ease;
+        margin-bottom: 24px;
+        }
+
+        .primary-button:hover {
+        transform: scale(1.05);
+        }
+
+        .store-buttons {
+        display: flex;
+        justify-content: center;
+        gap: 16px;
+        flex-wrap: wrap;
+        }
+
+        .store-button {
+        display: flex;
+        align-items: center; /* Align items horizontally */
+        gap: 10px;
+        background-color: #333;
+        padding: 12px 24px;
+        border-radius: 12px;
+        text-decoration: none;
+        color: #fff;
+        font-weight: 600;
+        transition: background-color 0.2s ease;
+        }
+
+        .store-button img {
+        width: 20px;
+        height: 20px;
+        }
+
+        .store-button:hover {
+        background-color: #444;
+        }
+
+
     body {
       font-family: 'Inter', sans-serif;
       background-color: #2A2A2C;
@@ -57,6 +103,15 @@
       text-decoration: none;
       transition: transform 0.2s ease;
     }
+    .cta a div{
+        display: inline-block;
+        align-items: center;
+        gap: 10px;
+    }
+    .cta a img {
+        margin-bottom: -3px;
+    }
+    
 
     .cta a:hover {
       transform: scale(1.05);
@@ -114,8 +169,19 @@
     <h1>TranscribeX</h1>
     <h2>Real-time Voice-to-Text with AI-Powered Summaries</h2>
     <div class="cta">
-      <a href="#features">Start Transcribing</a>
-    </div>
+        <a href="#features" class="primary-button">Start Transcribing</a>
+      
+        <div class="store-buttons">
+          <a href="https://apps.apple.com/" class="store-button ios" target="_blank">
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/mac-os.png" alt="iOS" />
+            <div>Download for iOS</div>
+          </a>
+          <a href="https://play.google.com/store/apps" class="store-button android" target="_blank">
+            <img src="https://img.icons8.com/color/48/google-play.png" alt="Android" />
+            <div>Download for Android</div>
+          </a>
+        </div>
+      </div>
   </header>
 
   <section id="features">
