privacy.html page

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>404 - TranscribeX.ai</title>
+  <title>404 - TranscribeX</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     body {
@@ -72,7 +72,7 @@
 </head>
 <body>
 
-  <img src="assets/icon.png" alt="TranscribeX.ai Logo" class="logo" />
+  <img src="assets/icon.png" alt="TranscribeX Logo" class="logo" />
 
   <h1>404</h1>
   <h2>Page Not Found</h2>
