--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
   </section>
 
   <footer>
-    <p>Made with ❤️ by <a href="https://transcribex.ai">TranscribeX</a></p>
-    <p>Need help? <a href="mailto:support@transcribex.ai">support@transcribex.app</a></p>
+    <p>Made with ❤️ by <a href="https://transcribex.app">TranscribeX</a></p>
+    <p>Need help? <a href="mailto:support@transcribex.app">support@transcribex.app</a></p>
   </footer>
 
 </body>
