add privacy page link

--- a/index.html
+++ b/index.html
@@ -192,23 +192,24 @@
 
     <div class="feature">
       <h3>🧠 Smart Summaries</h3>
-      <p>Claude AI automatically extracts insights, highlights, and action items from your conversations.</p>
+      <p>AI automatically extracts insights, highlights, and action items from your conversations.</p>
     </div>
 
     <div class="feature">
       <h3>🔒 Secure and Private</h3>
-      <p>Your recordings are encrypted on-device and securely stored using Google Cloud Firestore.</p>
+      <p>Your recordings are encrypted on-device and securely stored.</p>
     </div>
 
     <div class="feature">
       <h3>📱 Mobile First</h3>
-      <p>Built for iOS and Android using React Native. Coming soon to web!</p>
+      <p>Built for iOS and Android.</p>
     </div>
   </section>
 
   <footer>
     <p>Made with ❤️ by <a href="https://transcribex.app">TranscribeX</a></p>
     <p>Need help? <a href="mailto:support@transcribex.app">support@transcribex.app</a></p>
+    <p><a href="privacy.html">Privacy Policy</a></p>
   </footer>
 
 </body>
